service.yaml
apiVersion: v1
kind: Service

metadata:
  name: farmora-service
  namespace: farmora

spec:
  selector:
    app: farmora

  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000 

  type: ClusterIP
