ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: farmora-ingress
  namespace: farmora

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: farmora-service
            port:
              number: 3000
